--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@ body {
     padding-top: 56px;
   }
 }
-
+.mainContainer{
+  margin-bottom: 120px;
+}
 .portfolio-item {
   margin-bottom: 30px;
 }
@@ -57,4 +59,13 @@ body {
 .contactIcon{
   display: inline-block;
   vertical-align: middle;
+  font-size: 50px;
+  margin-right: 10px;
+  color: black;
+}
+
+.ContactText{
+  display: inline-block;
+  font-size: 30px;
+  color: black;
 }
