add css for skill badges
Signed-off-by: Anthony Veaudry <anthonyveaudry@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,10 @@ body {
   font-size: 30px;
   color: black;
 }
+
+.skill-badge{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+}
