add a way to download the contact card
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,14 @@ body {
   max-width: 100%;
 }
 
+.contact-download-button{
+  margin-top: 15px;
+  width: 45px;
+  align-self: flex-end;
+  margin-right: 15px;
+}
+
+
 @media (min-width: 768px) { 
   .contactIcon {
    margin-right: 20px;
