--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,13 @@ body {
   margin-right: 15px;
 }
 
+.project-12-thumbnail{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 @media (min-width: 768px) { 
   .contactIcon {
