--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,12 @@ body {
   margin-right: 15px;
 }
 
+.contact-line-container{
+  width: 100%;
+  height: 100%;
+  padding: .75rem 1.25rem;
+}
+
 .project-12-thumbnail{
   width: 100%;
   height: 100vh;
