--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ body {
 
 .scrollProgressBar__container {
   position: fixed;
-  z-index: 1031 !important;
+  z-index: 1031;
   width: 100%;
   height: 8px;
 }
