make the skill logos display more eavenly
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,12 @@ body {
   margin: 5px;
 }
 
+.skills{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 .page-not-found{
   max-width: 100%;
 }
