--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,11 @@ body {
   margin-bottom: 20px;
 }
 
+.card-buttons a {
+    width: 100%;
+    margin: 5px;
+  }
+
 .card-text{
   font-size: 20px;
 }
