make the focused link easy to see for better keyboard navigation
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body {
   padding-top: 54px;
 }
 
+a:focus {
+  outline-color: #0049fb;
+}
+
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
