--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ a:focus {
   margin: 0 auto;
   display: block;
   height: 45px;
+  animation: beatHeart 3s linear infinite;
 }
 
 .ContactText{
@@ -206,6 +207,24 @@ a:focus {
 .spin{
   display: inline-block;
   animation: spin 20s linear infinite;
+}
+
+@keyframes beatHeart {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  40% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 
