make the navlink color have a better contrast
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ a:focus, button:focus {
   outline-color: #0049fb;
 }
 
+.navbar-dark .navbar-nav .nav-link{
+  color: #aaa;
+}
+
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
