make the full screen open and closebuttons display a pointer
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,7 @@ a:focus, button:focus {
   padding: 9px;
   border-radius: 10px;
   border: none;
+  cursor: pointer;
 }
 
 .enlarge-icon:hover img{
