make the close modal button have more space
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,11 @@ a:focus, button:focus {
   border: 1px solid black;
 }
 
+.modal-title{
+  margin-bottom: 10px;
+}
+
+
 .ReactModal__Overlay {
     opacity: 0;
     transition: opacity 1000ms ease-in-out;
