--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,9 @@ a:focus, button:focus {
 }
 
 .ProfilePhoto {
-  height: 250px;
-  width: 250px;
+  width: 75%;
+  max-height: 250px;
+  max-width: 250px;
   margin: 20px auto;
 }
 
