--- a/src/App.css
+++ b/src/App.css
@@ -177,11 +177,11 @@ a:focus, button:focus {
 }
 
 .enlarge-icon:hover img{
-  scale: 1.2;
+  transform : scale(1.2);
 }
 
 .shrink-icon:hover img{
-  scale: 0.8;
+  transform : scale(0.8);
 }
 
 .card{
