--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ a:focus, button:focus {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  background-color: rgba(176, 194, 212, 0.33)
+  background-color: rgba(176, 194, 212, 0.33);
   padding: 1.25rem 0;
 }
 
