--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,11 @@ a:focus, button:focus {
 }
 
 
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@keyframes spin {
+  100% {
+    transform:rotate(360deg);
+  }
+}
 
 .spin{
   display: inline-block;
