--- a/src/App.css
+++ b/src/App.css
@@ -115,8 +115,7 @@ a:focus, button:focus {
 }
 
 .contact-line-container{
-  width: 100%;
-  height: 100%;
+  display: block;
   padding: .75rem 1.25rem;
 }
 
