make the modals look better
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App.css
+++ b/src/App.css
@@ -188,12 +188,12 @@ a:focus, button:focus {
 
 .viewer-iframe{
   width: 100%;
-  height: 94%;
-  outline: 1px solid black;
+  height: 92%;
 }
 
 .modal-title{
-  margin-bottom: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
 }
 
 
