--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ a:focus, button:focus {
 
 .main-logo{
   height: 40px;
+  margin-right: 5px;
 }
 
 .SuperCode, .SuperCode:hover{
@@ -165,8 +166,8 @@ a:focus, button:focus {
 .enlarge-icon, .shrink-icon{
   display: block;
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 12px;
+  top: 12px;
   background : rgba(255, 255, 255, 0.66);
   padding: 9px;
   border-radius: 10px;
