--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,8 @@ a:focus, button:focus {
   position: absolute;
   right: 12px;
   top: 12px;
-  background : rgba(255, 255, 255, 0.66);
+  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.66);
   padding: 9px;
   border-radius: 10px;
   border: none;
