--- a/src/App/App.css
+++ b/src/App/App.css
@@ -197,7 +197,7 @@ button:focus,
   animation: spin 20s linear infinite;
 }
 
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
   .contactIcon {
    margin-right: 20px;
    display: inline-block;
@@ -213,6 +213,16 @@ button:focus,
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #242424;
+    color: #fff;
+  }
+  .card-body, .card {
+    background-color: #333333;
   }
 }
 
