--- a/src/App/App.sass
+++ b/src/App/App.sass
@@ -3,6 +3,8 @@
  * Copyright 2013-2018 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-3-col-portfolio/blob/master/LICENSE)
 
+@import "node_modules/bootstrap/scss/bootstrap.scss"
+
 body
   margin: 0
   padding: 0
