adds font awsome
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/App/App.sass
+++ b/src/App/App.sass
@@ -4,6 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-3-col-portfolio/blob/master/LICENSE)
 
 @import "node_modules/bootstrap/scss/bootstrap.scss"
+@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
+@import "node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
 
 body
   margin: 0
