--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -197,6 +197,31 @@ a:focus, button:focus, .btn:focus a {
   animation: spin 20s linear infinite;
 }
 
+.link-unstyled {
+  &,
+  &:visited,
+  &:hover,
+  &:active,
+  &:focus,
+  &:active:hover {
+    font-style: inherit;
+    color: inherit;
+    background-color: transparent;
+    font-size: inherit;
+    text-decoration: none;
+    font-variant: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    font-family: inherit;
+    border-radius: inherit;
+    border: inherit;
+    outline: inherit;
+    box-shadow: inherit;
+    padding: inherit;
+    vertical-align: inherit;
+  }
+}
+
 @media (min-width: 768px) {
   .contactIcon {
     margin-right: 20px;
