adds styles for a cursor class
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -197,6 +197,10 @@ a:focus, button:focus, .btn:focus a {
   animation: spin 20s linear infinite;
 }
 
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
 .link-unstyled {
   &,
   &:visited,
