--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,7 @@
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 @import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
+@import "./timeline.scss";
 
 body {
   margin: 0;
