fixes time line color
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/src/assets/scss/_timeline.scss
+++ b/src/assets/scss/_timeline.scss
@@ -3,6 +3,7 @@
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  color: $body-color;
 }
 
 /* The actual timeline (the vertical ruler) */
